--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-	'PyLexicon' is a desktop application of dictionary written in python
+	'Plexicon' is a desktop application of dictionary written in python
