features to be added

--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
     TODO List
  --------------------------
- o Add support for some more languages like german, french etc.
+ o Add support for some other languages like german, french etc.
