news for Plexicon

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,2 @@
-	The source code for the 'data.py' file couldn't be distributed; since
-it contains API keys of dictionary.com <http://dictionary.reference.com/> &
-of Big Huge Thesaurus  <http://words.bighugelabs.com/> which are private to my account.
-	So I've distributed the compiled 'data.pyc' file instead.
+	>  Any anomaly or bug can be reported directly to the 
+developer's email address (dibyendu.das.in@gmail.com)
