news for Plexicon

--- a/NEWS
+++ b/NEWS
@@ -1,2 +1,5 @@
-	>  Any anomaly or bug can be reported directly to the 
+	*	Any anomaly or bug can be reported directly to the
 developer's email address (dibyendu.das.in@gmail.com)
+
+	*	This is the second release. Database support added 
+along with some minor improvements. (2011-07-26)
