--- a/INSTALL
+++ b/INSTALL
@@ -28,10 +28,16 @@ The simplest way to compile this package is:
      messages telling which features it is checking for.
      
 [N.B: This application is written fully in python. So it's needless to say that you'll need python interpreter
-installed on your system (I've used python 2.6 by the way). You will also require two additional python modules
-viz. 'pygtk' & 'pygst'.You can download those from the following links:
-         pygtk : "http://www.pygtk.org/"
-         pygst : "http://gstreamer.freedesktop.org/modules/gst-python.html"
+installed on your system (I've used python 2.6 by the way). You will also require few additional python modules
+viz. 'pygtk' & 'pygst', 'pycairo', 'sqlite3'.You can download those from the following links:
+
+     |***********************************************************************|
+     |   pygtk : "http://www.pygtk.org/"                                     |
+     |   pygst : "http://gstreamer.freedesktop.org/modules/gst-python.html"  |
+     |   pycairo : "http://cairographics.org/pycairo/"                       |
+     |   sqlite3 : "http://www.sqlite.org/"                                  |
+     *************************************************************************
+
 However if you're a debian user you can probably search in your repository]
 
   2. Optionally, type 'make check' to run any self-tests that come with
@@ -40,8 +46,8 @@ However if you're a debian user you can probably search in your repository]
   3. Type 'make install' as root to install the programs and any data files.(you can type 
      'sudo make install' & enter your root password)
 
-**********************************************************************************
-******************************************************************************** |
+*********************************************************************************|
+*******************************************************************************| |
   4. Type 'make shortcut' as root to create a desktop shortcut.(you can type   | |
      'sudo make shortcut' & enter your root password as before)                | |
                                                                                | |
